--- a/client/salesmart/pubspec.yaml
+++ b/client/salesmart/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   cupertino_icons: ^1.0.6
   intl_phone_field: ^3.2.0
   http: ^1.2.1
+  google_fonts: ^6.2.1
+  fl_chart: ^0.68.0
+  dropdown_textfield: ^1.2.0
+  simple_gradient_text: ^1.3.0
+  uuid: ^4.4.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
