--- a/client/salesmart/pubspec.yaml
+++ b/client/salesmart/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   simple_gradient_text: ^1.3.0
   uuid: ^4.4.2
   intl: ^0.19.0
+  pinput: ^5.0.0
 
 dev_dependencies:
   flutter_test:
