--- a/client/salesmart/pubspec.yaml
+++ b/client/salesmart/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   animated_text_kit: ^4.2.2
   smooth_page_indicator: ^1.2.0+3
   jwt_decoder: ^2.0.1
+  shared_preferences: ^2.2.2
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
